--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>HTML</title>
+  <title>HTML testando</title>
   
-  <!-- HTML -->
-  
-
-  <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <p>Nothing to see here...</p>
-  <h1>
+<body style = "background-color: orangered">
+  <p style = "font-family: times new roman">Nothing <br> to see here...</p>
+  <a href="https://www.w3schools.com/html/html_basic.asp">
+    isso é um link
+  </a>
+  <h1 style = "text-align: center" style = "color:green">
+    <em> what </em>
     Testando 1234
   </h1>
-  <!-- Project -->
+  <hr>
+  <p><i><strong> importante </strong>
+    separando parágrafos em itálico </i>
+  </p>
+  <p>
+    A <abbr title = "Organização das nações unidas">
+      ONU
+    </abbr>
+    está tomando decisões equivocadas
+  </p>
+  <img src="https://pixabay.com/pt/photos/cachorro-filhote-de-cachorro-6240043/" width ="100" height = "100" alt = "google.com">
   <script src="main.js"></script>
 </body>
 </html>
